# daz-cad

./: .gitignore  3mf.txt  README.md  claude.md  example.py  example_test.py  pyproject.toml  requirements.txt  run  run.py  run_utils.py  smoketest  string_utils.py  string_utils_test.py  test_run_script.py
.dazbuild/: instructions.md  instructions.txt
dazcad/: .pylintrc  README.md  __init__.py  assembly_processor.py  autosave.js  cadquery_core.py  cadquery_file_executor.py  cadquery_file_executor_test.py  cadquery_file_validator.py  cadquery_object_extractor.py  cadquery_object_extractor_test.py  cadquery_processor.py  chat.js  color_processor.py  color_processor_test.py  colored_logging.py  colored_logging_test.py  common_imports.py  common_imports_test.py  coordinate_system_debug.js  coordinate_system_docs.js  debug_diagnostics.py  debug_diagnostics_test.py  diagnostic_cadquery.py  diagnostic_execution.py  diagnostic_export.py  diagnostic_library.py  download_handler.py  editor.js  export_assemblies.py  export_formats.py  export_patterns.py  export_patterns_test.py  export_shapes.py  export_utils.py  import_test_mocks.py  import_test_utils.py  import_test_utils_test.py  index.html  library.js  (+80 more)
docs/: library-reference.md  perf-test-results.md  user-guide.md
examples/: baseplate-demo.js  baseplate-on-surface.js  border-demo.js  clip-demo.js  default.js  demo_lines_pattern.js  demo_patterns.js  gridfinity-demo.js  open-box.js  tab-demo.js
site/: .gitignore  run
src/: __init__.py  conftest.py  perf_test.py  server.py  server_test.py
static/: app.js  cad-tests.js  (+12 more)
(+14 files in other folders)
