[project]
name = "daz-cad"
version = "0.1.0"
description = "OpenCascade.js wrapper with Python server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "setproctitle>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "playwright>=1.41.0",
    "ruff>=0.1.0",
]

[project.scripts]
daz-cad = "src.server:main"

[tool.pytest.ini_options]
testpaths = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
